# snow

./: .gitignore  LICENSE  README.md  lumerical.py  pyproject.toml
DevinCode/: Custom Waveguides.ipynb  Grating plots.ipynb  Luis' Tutorial .ipynb  customwaveguides.py  gratings.py  helpers.py  poledwaveguides.py
Examples/: Example_Waveguide_SHG.ipynb  Tutorial_Pulses.ipynb
FDTD/: FDTD_1D_7_Dielectric_Full.ipynb  FDTD_1D_LINbO3_DFG-Copy1.ipynb  FDTD_1D_LINbO3_SHG.ipynb
Group/: CodeRobby_main.m  nonlinearopo.m
Layouts/: Delta_b30_poling_electrodes.ipynb  Delta_chip.ipynb  MyLayerSet.lyp  Poling_Devel.ipynb  Template.ipynb  Test.ipynb
Lumerical/: Analytical_Ridge_neff.py  Basic_modes_vs_width.py  Basic_modes_vs_width_plot.py  Basic_script.py  Basic_script_2wgs.py  Basic_script_FDTD.py  Basic_script_varFDTD.py  Basic_sweep_theta.py  Basic_sweep_theta_plot.py  Coupler_design_bandwidth.py  Coupler_design_bandwidth_plot.py  Coupler_design_sweep_gap.py  Coupler_design_sweep_gap_plot.py  DispersionEngineering_step_1.py  DispersionEngineering_step_1_plot.py  DispersionEngineering_step_2.py  DispersionEngineering_step_2_plot.py  DispersionEngineering_step_3.py  DispersionEngineering_step_3_plot.py  FSR_plot.py  LNOI_functions.py  LNOS_design_lowGVD_lowGVM.py  LNOS_frequency_sweep.py  LNOS_frequency_sweep_plot.py  LN_Sellmeier.py  Lowetch_design_step_1.py  Lowetch_design_step_1_plot.py  Lowetch_design_step_2.py  Lowetch_design_step_2_plot.py  Lowetch_design_step_3.py  Lowetch_design_step_3_plot.py  Modal_phase_matching_analysis.py  Mode_crossing_test.py  Plot_GVD_and_GVM.py  (+1 more)
(+154 files in other folders)
